...
                        HStack {
                            // Each entry shows the name of the team
                            // as well as a button to toggle its favourite status.
                            Button {
                                toggleFavourite(id: team.id)
                            } label: {
                                Image(systemName: team.isFavourite ? "heart.fill" : "heart")
                                    .foregroundStyle(.red)
                            }
                            .buttonStyle(BorderlessButtonStyle())
                            // When clicking on the entry,
                            // it opens up the TeamDetailView for the user to edit it.
                            NavigationLink {
...
        .toolbar {
            // The toolbar shows the button for adding new Teams.
            ToolbarItem(placement: .topBarTrailing) {
                Button {
                    showPopup = true
                } label: {
                    Image(systemName: "plus")
                        .foregroundColor(Color.accentColor)
                }
            }
        }
        .popover(isPresented: $showPopup) {
            // This pop over will appear to allow the user to add a team.
...
